fix(@vtmn/css-checkbox): add vertical align for label, reduce radius, align icon, darker border

--- a/packages/sources/css/src/components/checkbox/src/index.css
+++ b/packages/sources/css/src/components/checkbox/src/index.css
@@ -23,17 +23,17 @@
   content: '';
   position: absolute;
   left: rem(1px);
-  top: rem(7px);
+  top: rem(9px);
   width: rem(18px);
   height: rem(18px);
   border-width: rem(2px);
   border-style: solid;
-  border-radius: rem(4px);
+  border-radius: rem(1px);
   transition: all 0.275s;
 }
 
 .vtmn-checkbox[type='checkbox']:not(:checked) + label::before {
-  border-color: var(--vtmn-color_grey-light-1);
+  border-color: var(--vtmn-color_grey);
 }
 
 .vtmn-checkbox[type='checkbox']:not(:checked):not(:disabled):hover
@@ -69,8 +69,8 @@
 .vtmn-checkbox[type='checkbox'] + label::after {
   content: url("data:image/svg+xml;charset=utf-8, <svg width='18' height='18' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'><path d='M5.80351 10.8L14.2875 2.31484L12.5907 0.618038L5.80351 7.40644L2.40871 4.01164L0.711914 5.70844L5.80351 10.8Z' fill='white'/></svg>");
   position: absolute;
-  top: rem(11px);
-  left: rem(3px);
+  top: rem(12.5px);
+  left: rem(3.5px);
   color: var(--vtmn-color_white);
   transition: all 0.2s;
 }
